Some changes in index file

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ h1, h2, h3, h4, h5, h6 {
 
 <body>
 
-<h1>Welcome, this is my space where I used to upload the examples and working hacks on different JS libraries.</h1>
+<h1>Welcome, this is my space where I used to upload the examples and working hacks on Web2.0 Technologies.</h1>
 
 <div>
 <p>Sample Pages using YUI 2 JS library</p>
 
-<ul style="padding-left: 50px;">
+<ul style="padding-left: 10px;">
     <li><a href="yui/freezeRow.html">Freezing a row in DataTable</a></li>
 	<li><a href="yui/examples/Folder-Style-TreeView.html">Folder Style TreeView</a>&nbsp;[Done by Collegue Ram]</li>
 	<li><a href="yui/examples/YUI-Autocomplete-ViewList-Widgets/autocomplete-view-list.html">Autocomplete & View List</a>&nbsp;[Done by Collegue Ram]</li>
