Removing the dead links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ h1, h2, h3, h4, h5, h6 {
 <ul style="padding-left: 20px;">
     <li><a href="yui/examples/yui3_first.html">First example page developed using YUI3</a></li>
 	<li><a href="yui/examples/yui3_event_fire.html">Event firing manually using YUI3 Event module</a></li>
-	<li><a href="yui/examples/yui3_event_delegation.html">Event delegation using YUI3</a></li>
+	<!--li><a href="yui/examples/yui3_event_delegation.html">Event delegation using YUI3</a></li>
 	<li><a href="yui/examples/yui3_app_example.html">YUI3 App Framework example</a></li>
-	<li><a href="yui/examples/yui3_touch_example.html">YUI3 Touch Event example</a></li>
+	<li><a href="yui/examples/yui3_touch_example.html">YUI3 Touch Event example</a></li-->
 </ul>
 </div>
 
