--- a/index.html
+++ b/index.html
@@ -52,13 +52,24 @@ h1, h2, h3, h4, h5, h6 {
 	<li><a href="yui/examples/yui3_touch_example.html">YUI3 Touch Event example</a></li-->
 </ul>
 </div>
-
 <div style="clear:both; height: 10px;"></div>
 <div>
 <p>Sample Pages on HTML5</p>
 
 <ul style="padding-left: 20px;">
     <li><a href="html5/examples/chatApp.html">Simple example on HTML5 WebWorker</a></li>
+	<!--li><a href="yui/examples/yui3_event_fire.html">Event firing manually using YUI3 Event module</a></li>
+	<li><a href="yui/examples/yui3_event_delegation.html">Event delegation using YUI3</a></li>
+	<li><a href="yui/examples/yui3_app_example.html">YUI3 App Framework example</a></li>
+	<li><a href="yui/examples/yui3_touch_example.html">YUI3 Touch Event example</a></li-->
+</ul>
+</div>
+<div style="clear:both; height: 10px;"></div>
+<div>
+<p>Sample Pages using jQuery</p>
+
+<ul style="padding-left: 20px;">
+    <li><a href="jquery/examples/jqueryUA.html">UA detection and adding to body class attribute</a></li>
 	<!--li><a href="yui/examples/yui3_event_fire.html">Event firing manually using YUI3 Event module</a></li>
 	<li><a href="yui/examples/yui3_event_delegation.html">Event delegation using YUI3</a></li>
 	<li><a href="yui/examples/yui3_app_example.html">YUI3 App Framework example</a></li>
