--- a/jquery/examples/jqueryUA.html
+++ b/jquery/examples/jqueryUA.html
@@ -24,6 +24,7 @@
 				} else if (uaObj.indexOf('opera') != -1) {
 					browserClassName = "opera";
 				} else if (uaObj.indexOf('msie') != -1) {
+					alert(uaObj);
 					//@TODO need to drill down and check for IE different versions too.
 					browserClassName = "ie";
 				}
