Some intermediate changes

--- a/html5/examples/asyncChanges.html
+++ b/html5/examples/asyncChanges.html
@@ -22,12 +22,12 @@
 			<ol id="responseList" style="width: 300px; display: inline-block; height: 100px; overflow-y: auto; border: 1px solid;">
 			</ol>
 			<div class="clearDiv"></div>
-			<input type="button" name="get_btn" id="get_btn" value="Get Data"></button>
+			<input type="button" name="getBtn" id="getBtn" value="Get Data" />
 		</div>
 		<div id="userSourceText">
-			<textarea id="sourceText" rows="5" cols="30"></textarea>
+			<input type="text" id="sourceText" name="sourceText"/>
 			<div class="clearDiv" style="height: 10px;"></div>
-			<textarea id="destText" rows="5" cols="30" style="background-color: #dcdcdc;"></textarea>			
+			<textarea id="destText" rows="5" cols="30" style="background-color: #dcdcdc;" name="destText"></textarea>			
 		</div>
 	</body>
 	<script type="text/javascript" src="http://yui.yahooapis.com/3.4.1/build/yui/yui-min.js"></script>
