Adding new item

--- a/scripps/index.html
+++ b/scripps/index.html
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 	<ul style="padding-left: 20px;">
     	<li><a href="./Closures.html">JavaScript Closures</a></li>
 		<li><a href="./NewObj.html">New OBJ creation using function constructor</a></li>
-		<li><a href="yui/examples/YUI-Autocomplete-ViewList-Widgets/autocomplete-view-list.html">Autocomplete & View List</a>&nbsp;[Done by Collegue Ram]</li>
+		<li><a href="./JSONPopulation.html">HTML using JSON</li>
 		<li><a href="yui/examples/Adding-Updating-Del.html">Adding, Updating, and Deleting Rows in Data Table</a>&nbsp;[Done by Collegue Ram]</li>
 		<li><a href="yui/examples/DataTable-Menu.html">DataTable Menu Integration</a>&nbsp;[Done by Collegue Ram]</li>
 	</ul>
