Fuzz program linking

--- a/scripps/index.html
+++ b/scripps/index.html
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 		<li><a href="./NewObj.html">New OBJ creation using function constructor</a></li>
 		<li><a href="./JSONPopulation.html">HTML using JSON</li>
 		<li><a href="./ListInteraction.html">List Interaction</li>
-		<li><a href="yui/examples/DataTable-Menu.html">DataTable Menu Integration</a>&nbsp;[Done by Collegue Ram]</li>
+		<li><a href="./FuzzProgram.html">FuzzBuzz.html</li>
 	</ul>
 </div>
 </body>
