Some text change

--- a/scripps/index.html
+++ b/scripps/index.html
@@ -27,10 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 
 <body>
 
-<h1>Hi, L Ravi Kiran having some examples on JavaScript...</h1>
+<h1>Some JavaScript code snippets on few use-cases.</h1>
 
 <div>
-	<p>Some concepts</p>
+	<p>Concepts</p>
 	<ul style="padding-left: 20px;">
     	<li><a href="./Closures.html">JavaScript Closures</a></li>
 		<li><a href="./NewObj.html">New OBJ creation using function constructor</a></li>
