jQuery lib reference and skin name change

--- a/jquery/examples/jqueryUA.html
+++ b/jquery/examples/jqueryUA.html
@@ -7,12 +7,12 @@
 		<div style="width: 200px; margin: 1% auto; border: 1px solid; padding: 10px;">
 			Hi! This page will set the skin name in class along with browser identifier.
 		</div>
-		<script type="text/javascript" src="http://g-ecx.images-amazon.com/images/G/01/TransCentral/javascript/jquery-1.5.2.min.js">
+		<script type="text/javascript" src="../jquery.js">
 		</script>
 		<script type="text/javascript">
 			$(document).ready(function (){
 				var browserClassName = "",
-					skinName = "ccs-skin",
+					skinName = "saburi-skin",
 					bodyClassName = "",
 					uaObj = navigator.userAgent.toLowerCase();
 				if (uaObj.indexOf('firefox') != -1) {
