Adding charset for files

--- a/jquery/examples/jqueryUA.html
+++ b/jquery/examples/jqueryUA.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>jQuery UA Example</title>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=960" id="meta-viewport" />
 	</head>
 	<body>
 		<div style="width: 200px; margin: 1% auto; border: 1px solid; padding: 10px;">
