Array comparator enclosure

--- a/jquery/examples/objectCompare.html
+++ b/jquery/examples/objectCompare.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../../saburi-styles.css" />
 		<!--script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script-->
 		<script type="text/javascript" src="../jquery.js"></script>
+		<script type="text/javascript" src="../plugins/jquery.arrayCompare.js"></script>
 		<script type="text/javascript" src="../plugins/jquery.objectCompare.js"></script>
 	</head>
 	<body>
