--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>My Page</title> 
+	<title>Layout Manager - Layout Modification</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
     <meta name="viewport" content="width=960" id="meta-viewport">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
