--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -25,7 +25,7 @@
 	<style type="text/css">
 	
 		#mainLayout {
-			width: 768px;
+			width: 100%;
 			height: auto;
 			margin: 0px auto;
 			border: 1px dotted;
@@ -127,6 +127,10 @@
 		
 		#building ul li {
 			margin: 5px;
+		}
+		
+		#building #d1 li {
+			float: right;
 		}
 	</style>
 </head> 
