--- a/srujan12/first/editpage.html
+++ b/srujan12/first/editpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>My Page</title> 
+	<title>Layout Manager - Modify Layout</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
     <meta name="viewport" content="width=960" id="meta-viewport">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -25,7 +25,7 @@
 	<style type="text/css">
 	
 		#mainLayout {
-			width: 768px;
+			width: 100%;
 			height: auto;
 			margin: 0px auto;
 			border: 1px dotted;
