--- a/srujan12/first/newpage.html
+++ b/srujan12/first/newpage.html
@@ -22,7 +22,7 @@
 	<style type="text/css">
 	
 		#mainLayout {
-			width: 768px;
+			width: 100%;
 			height: auto;
 			margin: 0px auto;
 			border: 1px dotted;
