Updated styles with assets

--- a/srujan12/first/editpage.html
+++ b/srujan12/first/editpage.html
@@ -124,6 +124,14 @@
 		#mainLayout .yui3-dd-drop-over {
 		    background-color: #ffffcc;
 		}
+
+		#building ul li {
+			margin: 5px;
+		}
+		
+		#building #d1 li {
+			float: right;
+		}
 	</style>
 </head> 
 <body class="yui3-skin-sam"> 
