Adding reverse image for docks

--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -141,6 +141,10 @@
 			float: right;
 		}
 		
+		#building #d2 li {
+			background-image: url(images/dockdoor_r.png);
+		}
+		
 		#layout {
 			border: 1px solid; width: 640px; float: left; display: inline-block;
 		}
@@ -260,7 +264,7 @@ YUI().use('dd-drop', 'dd-proxy', 'dd-constrain', function(Y) {
 				newNode.setStyles({
 					color: "#000000",
 					margin: "5px 0",
-					width: "100px"
+					width: "103px"
 				});
 				newNode.setHTML("<span class='ydText'>DD-" + newCnt + "</span>");
 			} else {
