--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -141,7 +141,7 @@
 			float: right;
 		}
 		
-		#building #d2 li {
+		#building #d2 li.dockEl {
 			background-image: url(images/dockdoor_r.png);
 		}
 		
