--- a/srujan12/first/newpage.html
+++ b/srujan12/first/newpage.html
@@ -76,7 +76,7 @@
 			display: inline-block;
 		}
 		
-		@mobile handheld {
+		@media handheld {
 			a#first {
 				background-image: url(images/type1_h.png);
 			}
