Mobile device styles

--- a/srujan12/first/newpage.html
+++ b/srujan12/first/newpage.html
@@ -80,6 +80,21 @@
 			a#first {
 				background-image: url(images/type1_h.png);
 			}
+			a#second {
+				background-image: url(images/type2_h.png);
+			}
+			a#third {
+				background-image: url(images/type3_h.png);
+			}
+			a#fourth {
+				background-image: url(images/type4_h.png);
+			}
+			a#fifth {
+				background-image: url(images/type5_h.png);
+			}
+			a#sixth {
+				background-image: url(images/type6_h.png);
+			}
 		} 
 		
 		a#first:hover {
