Adding some background images for slots

--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -84,7 +84,7 @@
 		}
 				
 		li.yardEl {
-			background-image: url(images/yard_n.png);
+			background-image: url('images/yard_n.png');
 			width: 105px;
 			height: 48px;
 			display: inline-block;
@@ -92,7 +92,7 @@
 		}
 		
 		li.dockEl {
-			background-image: url(images/dockdoor.png);
+			background-image: url('images/dockdoor.png');
 			width: 102px;
 			height: 65px;
 			display: inline-block;
@@ -110,11 +110,11 @@
 		}
 		
 		li#editBtn {
-			background-image: url(images/export_btn.png);
+			background-image: url('images/export_btn.png');
 		}
 		
 		li#resetBtn {
-			background-image: url(images/reset_btn.png);
+			background-image: url('images/reset_btn.png');
 			background-repeat: no-repeat;
 		}
 		
@@ -133,7 +133,7 @@
 		}
 		
 		#internal {
-			background-image: url(images/sortcenter.png);
+			background-image: url('images/sortcenter.png');
 			width: 172px;
 			min-height: 344px;
 			display: inline-block;
@@ -157,7 +157,7 @@
 		}
 		
 		#building #d2 li.dockEl {
-			background-image: url(images/dockdoor_r.png);
+			background-image: url('images/dockdoor_r.png');
 		}
 		
 		#layout {
@@ -190,6 +190,14 @@
 		
 		#yard-slots {
 			min-width: 95px; float: right; display: inline-block; margin-left: 10px;
+		}
+		
+		.yardPanel .ydslots {
+			background-image: url('images/yardBG.png');
+		}
+		
+		.dockPanel .ydslots {
+			background-image: url('images/dockBG.png');
 		}
 	</style>
 </head> 
