Removing the slot images

--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -192,13 +192,13 @@
 			min-width: 95px; float: right; display: inline-block; margin-left: 10px;
 		}
 		
-		.yardPanel .ydslots {
+		/*.yardPanel .ydslots {
 			background-image: url('images/yardBG.png');
 		}
 		
 		.dockPanel .ydslots {
 			background-image: url('images/dockBG.png');
-		}
+		}*/
 	</style>
 </head> 
 <body class="yui3-skin-sam"> 
