--- a/srujan12/first/firstLayout.html
+++ b/srujan12/first/firstLayout.html
@@ -185,7 +185,7 @@
 		}
 		
 		.ydslots {
-			border:1px solid; width: 120px; height: 65px; clear: both; float: left; display: inline-block;
+			width: 120px; height: 65px; clear: both; float: left; display: inline-block;
 		}
 		
 		#yard-slots {
