--- a/srujan12/first/editpage.html
+++ b/srujan12/first/editpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Layout Manager - Modify Layout</title> 
+	<title>Layout Manager - Layout Modification</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
     <meta name="viewport" content="width=960" id="meta-viewport">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -10,6 +10,18 @@
         document.getElementById('meta-viewport').setAttribute('content', 'width=768');
     }
     </script>
+    <!--link rel="stylesheet" href="cssFamily.css">
+    <link rel="stylesheet" href="yui3.7.2/build/cssgrids/cssgrids-min.css">
+
+    <link rel="stylesheet" href="main-min.css">
+    <link rel="stylesheet" href="prettify-min.css">
+    <link rel="stylesheet" href="docs-min.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+	<meta http-equiv="X-XRDS-Location" content="/xrds.xml">
+	<link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+
+	<script src="yui3.7.2/build/yui/yui-min.js"></script-->
+
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.7.2/build/cssgrids/cssgrids-min.css">
 
@@ -23,20 +35,28 @@
 	<script src="http://yui.yahooapis.com/3.7.2/build/yui/yui-min.js"></script>
 	
 	<style type="text/css">
+		h1, h2, h3, h4, h5 {
+			font-family: Myriad Pro;
+			font-weight: normal;
+			line-height: 5px;
+		}
 	
 		#mainLayout {
-			width: 100%;
+			width: 850px;
+			min-width: 850px;
 			height: auto;
 			margin: 0px auto;
-			border: 1px dotted;
 		}
 		
 		#mainLayout #toolBox {
-			width: 100%;
-			height: 50px;
+			width: 120px;
+			height: 100%;
+			min-height: 395px;
 			border-bottom: 1px shadow #dcdcdc;
-			background-color: lightblue;
-			text-align: center;
+			float: left;
+			display: inline-block;
+			margin: 0 5px 0 0;
+			position: relative;
 		}
 		
 		ul, li {
@@ -48,57 +68,54 @@
 		
 		li {
 			float: left;
-			margin: 0px 10px;
+			margin: 0px 5px;
 			cursor: pointer;
 		}
 		
 		ul#toolList {
 			float: left;
-			margin: 13px 5%;
+			margin: 13px 1%;
 		}
 		
 		ul#actionItems {
-			float: right;
-			margin: 8px 5%;
+			position: absolute;
+			left: 5px;
+			top: 76%;
 		}
-		
-		li#yard {
-			background-color: lightgreen;
-		}
-		
+				
 		li.yardEl {
-			border:1px solid #000;
-			width: 80px;
-			height: 20px;
+			background-image: url('images/yard_n.png');
+			width: 105px;
+			height: 48px;
+			display: inline-block;
 			text-align: center;
-			padding: 1px 0px;
 		}
 		
-		li#dock {
-			background-color: #0000ff;
-		}
-
 		li.dockEl {
-			border:1px solid #000;
-			width: 80px;
-			height: 20px;
+			background-image: url('images/dockdoor.png');
+			width: 102px;
+			height: 65px;
+			display: inline-block;
 			text-align: center;
-			color: yellow;
-			margin: -5px 0px;
-			padding: 5px 0px !important;
+		}
+		
+		li.dockEl span {
+			top: 35%;
 		}
 		
 		li.btns {
-			background-color: lightgray;
-			border-style: outset;
-			border-radius: 5px;
-			padding: 3px 10px;
-			border-radius: 5px;
-			font-weight: bold;
+			width: 100px;
+			height: 43px;
+			margin: 5px 0;
 		}
 		
 		li#editBtn {
-			background-color: orange;
+			background-image: url('images/export_btn.png');
+		}
+		
+		li#resetBtn {
+			background-image: url('images/reset_btn.png');
+			background-repeat: no-repeat;
 		}
 		
 		.clearDiv {
@@ -107,15 +124,21 @@
 		}
 		
 		.dockPanel {
-			width: 15%; height: 100%; float: left; display: inline-block; margin: 30px auto;
+			width: 135px; min-height: 344px; float: left; display: inline-block; background-color: #ececec; height: 100%;
 		}
 		
 		.yardPanel {
-			float: left; display: inline-block; width: 29.8%; height: 100%;
+			float: left; display: inline-block; width: 130px; min-height: 344px; height: 100%;
+			background-color: #ececec;
 		}
 		
 		#internal {
-			float: left; display: inline-block; width: 10%; height: 100%; background-color: #dcdcdc; border: 1px solid #bcbcbc; margin: 30px auto; text-align: center;
+			background-image: url('images/sortcenter.png');
+			width: 172px;
+			min-height: 344px;
+			display: inline-block;
+			float: left;
+			background-color: #ececec;
 		}
 		
 		#mainLayout .yui3-dd-drop-active-valid {
@@ -124,7 +147,7 @@
 		#mainLayout .yui3-dd-drop-over {
 		    background-color: #ffffcc;
 		}
-
+		
 		#building ul li {
 			margin: 5px;
 		}
@@ -132,46 +155,237 @@
 		#building #d1 li {
 			float: right;
 		}
+		
+		#building #d2 li.dockEl {
+			background-image: url('images/dockdoor_r.png');
+		}
+		
+		#layout {
+			border: 1px solid; width: 705px; resize: both; overflow: hidden;
+		}
+		
+		#building {
+			width: 100%;
+			padding-top: 10px;
+			background-color: #ececec;
+		}
+		
+		span.ydText {
+			position: relative;
+			top: 25%;
+			font-weight: bold;
+		}
+		
+		.hide {
+			display: none;
+		}
+
+		.show {
+			display: inline-block;
+		}
+		
+		.ydslots {
+			width: 120px; height: 65px; clear: both; float: left; display: inline-block;
+		}
+		
+		#yard-slots {
+			min-width: 95px; float: right; display: inline-block; margin-left: 10px;
+		}
+		
+		/*.yardPanel .ydslots {
+			background-image: url('images/yardBG.png');
+		}
+		
+		.dockPanel .ydslots {
+			background-image: url('images/dockBG.png');
+		}*/
 	</style>
 </head> 
 <body class="yui3-skin-sam"> 
 
 <div id="mainLayout">
+	<div id="scHd">
+		<h5>Layout Manager Tool</h5>
+		<h1>Manage Yards/Docks</h1>
+	</div>
+	<div class="clearDiv" style="height: 20px;"></div>
 	<div id="toolBox">
 		<ul id="toolList">
-			<li id="yard" class="dropEl yardEl">Yard Slot</li>
-			<li id="dock" class="dropEl dockEl">Dock Door</li>
+			<li id="yard" class="dropEl yardEl"><span class="ydText">Yard Slot</span></li>
+			<li id="dock" class="dropEl dockEl"><span class="ydText">Dock Door</span></li>
 		</ul>	
 		<ul id="actionItems">
-			<li id="editBtn" class="btns">Export</li>
-			<li id="resetBtn" class="btns">Reset</li>
+			<li id="editBtn" class="btns"></li>
+			<li id="resetBtn" class="btns"></li>
 		</ul>
 	</div>
-	<div id="layout" style="border: 1px solid; width: 90%; margin: 10px auto;">
-		<div id="building" style="width: 100%; height: 400px;">
+	<div id="layout">
+		<div id="building">
 			<ul class="yardPanel slot" id="y1">
-				<li class="dropEl yardEl" id="YY-1">YY-1</li>
-				<li class="dropEl yardEl" id="YY-2">YY-2</li>
-				<li class="dropEl yardEl" id="YY-3">YY-3</li>
+				<li>
+					<ul class="ydslots" id="yl1"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yl2"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yl3"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yl4"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yl5"></ul>
+				</li>
 			</ul>
 			<ul class="dockPanel slot" id="d1">
-				<li class="dropEl dockEl" id="DD-1" style="color: #000; width: 100px;">DD-1</li>
+				<li>
+					<ul class="ydslots" id="dl1"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dl2"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dl3"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dl4"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dl5"></ul>
+				</li>
 			</ul>
 			<div id="internal">
-				<span style="font-size: 20px; position: relative; top: 40%;">Sort Center</span>
 			</div>
-			<ul class="dockPanel slot" id="d2"></ul>
-			<ul class="yardPanel slot" id="y2"></ul>
+			<ul class="dockPanel slot" id="d2">
+				<li>
+					<ul class="ydslots" id="dr1"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dr2"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dr3"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dr4"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="dr5"></ul>
+				</li>
+			</ul>
+			<ul class="yardPanel slot" id="y2">
+				<li>
+					<ul class="ydslots" id="yr1"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yr2"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yr3"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yr4"></ul>
+				</li>
+				<li>
+					<ul class="ydslots" id="yr5"></ul>
+				</li>
+			</ul>
+			<div class="clearDiv" style="height: 0px;"></div>
 		</div>
-		<div class="clearDiv" style="height: 30px;"></div>
+		<div class="clearDiv" style="height: 0px;"></div>
 	</div>
+	<!-- Panel to Move/Delete the added Yard/Dock on Tap Action -->
+	<div id="dropModEl" class="hide" style="position: relative; left: 10px; top: 10px; background-color: #ececec; border: 1px solid #acacac; z-index: 10; padding: 5px;">
+		<span id="closeBtn" style="float: right; width: 15px; height: 15px; cursor: pointer;">X</span>
+		<ul>
+			<li style="clear: both; float: left; display: inline-block; margin: 0 5px; line-height: 22px; width: 120px;">
+				<input type="radio" name="dropElModCtrl" id="dropElMove" value="move" style="margin: 0px 5px;" />
+				<label for="dropElMove">Move To</label>
+				<div class="clearDiv"></div>
+				<select id="yard-slots" class="show">
+				</select>
+			</li>
+			<li style="clear: both; float: left; display: inline-block; margin: 0 5px; line-height: 22px; width: 120px;">
+				<input type="radio" name="dropElModCtrl" id="dropElDel" value="del" style="margin: 0px 5px;"/>
+				<label for="dropElDel">Remove</label>
+			</li>
+		</ul>
+		<div class='clearDiv'></div>
+		<div class="actionBtns">
+			<button id="okBtn" name="okBtn">OK</button>
+			<button id="cancelBtn" name="cancelBtn">Cancel</button>
+		</div>
+	</div>
+	<div class="clearDiv" style="height: 0px;"></div>
 </div>
 <script type="text/javascript">
-YUI().use('dd-drop', 'dd-proxy', 'dd-constrain', function(Y) {
+YUI({
+	groups: {
+		jq: {
+			base: './',
+			modules: {
+				jquery: {
+					path: 'jquery-1.8.2.min.js'
+				}
+			}
+		}
+	}
+}).use('dd-drop', 'dd-proxy', 'dd-constrain', 'event-tap', 'jquery', 'event-simulate', function(Y, result) {
+	var _this = this;
+
+	/**
+	 * Event handler for tap event for all the added yards/docks elements
+	 */
+	Y.one("#building").delegate("tap", function(e) {
+		var clickNode = e.target,
+			dropModEl = Y.one("#dropModEl"),
+			clickXY = e.target.getXY();
+		clickXY[0] = clickXY[0] + 20,
+		clickXY[1] = clickXY[1] + 10;
+		if ((e.target._node.tagName).toLowerCase() !== "span") {
+			var slotsList = clickNode.ancestor("ul.slot").all("li ul"),
+				slotHTML = "";
+			Y.each(slotsList, function(v, k){
+				slotHTML = slotHTML + "<option value='" + v.get('id') + "'>" + v.get('id') + "</option>";
+			});
+			Y.one("#yard-slots").empty();
+			Y.one("#yard-slots").append(slotHTML);
+			dropModEl.toggleClass("hide").toggleClass("show");
+			dropModEl.setXY(clickXY);
+			_this.dropEL = clickNode._node.id;
+		}
+	}, "ul li.dropEl");
 	
-	Y.one("#mainLayout").delegate("click", function(){
+	/**
+	 * Event handler to close the small edit popup for yards/docks
+	 */
+	Y.one("#mainLayout").delegate("tap", function(e){
+		Y.one("#dropModEl").toggleClass("show").toggleClass("hide");
+	}, "#dropModEl #closeBtn, #dropModEl #cancelBtn");
+	
+	Y.one("#mainLayout").delegate("tap", function(){
 		document.location = "/srujan12/first/firstLayout.html";
-	}, "#resetBtn");
+	}, "#resetBtn");	
+
+	/**
+	 * Event handler for Delete actions on added yards/docks
+	 */
+	Y.one("#mainLayout").delegate("tap", function (e) {
+		var modType = Y.one("input[name='dropElModCtrl']:checked").get('value'),
+			targetEL = Y.one("#" + _this.dropEL);
+		if (modType != "move") {
+			targetEL.remove();
+		} else {
+			var destULEl = Y.one("#" + $("select#yard-slots option:selected").val());
+			if (destULEl.hasChildNodes()) {
+				destULEl.empty();
+			}
+			destULEl.appendChild(Y.one("#" + _this.dropEL));
+		}
+		Y.one("#dropModEl").toggleClass("show").toggleClass("hide");
+	}, "#dropModEl #okBtn");
+	
 
     var slots = Y.one('#mainLayout').all('.slot');
     Y.each(slots, function(v, k) {
@@ -227,27 +441,62 @@ YUI().use('dd-drop', 'dd-proxy', 'dd-constrain', function(Y) {
         });
         drag.on('drag:drophit', function(e) {
             var xy = e.drop.get('node').getXY();
-			//Create a new node and drop the same to yardPanel
+			var dropELIdentifier = (e.drop.get('node')._node.id).substr(1),
+				placeId = "";
+			if (dropELIdentifier != 1) {
+				placeId = "R";
+			} else {
+				placeId = "L";
+			}
+			//Create a new node and drop the same to yardPanel/dockPanel
 			var newNode = this.get('node').cloneNode(),
-				childELs = e.drop.get('node').all("li");
-			var newCnt = childELs.size() + 1;
+				childELs = e.drop.get('node').all("li ul"),
+				targetUL = e.drop.get('node').one("li ul"),
+				targetFlag = false;
+			Y.each(childELs, function (v, k) {
+				_this.lastULId = parseInt(((v.get('id')).substr(2)), 10);
+				if (!v.hasChildNodes() && !targetFlag) {
+					targetUL = v;
+					targetFlag = true;
+				}
+			});
+			/**
+			 * Check if all predefined slots are over or not, if all already allocated then add the new one upon user acceptance
+			 */
+			if (!targetFlag) {
+				var ulId = "";
+				if (this.get('node').hasClass("dockEl")) {
+					ulId = "d" + placeId.toLowerCase() + (_this.lastULId + 1);
+				} else {
+					ulId = "y" + placeId.toLowerCase() + (_this.lastULId + 1);
+				}
+				var ulElement = "<li><ul class='ydslots' id='" + ulId + "'></ul></li>";
+				e.drop.get('node').append(ulElement);
+				targetUL = Y.one("ul#" + ulId);
+			}
+			
+			var newCnt = (targetUL._node.id).toUpperCase();
+			//var newCnt = childELs.size() + 1;
 			if (this.get('node').hasClass("dockEl")) {
-				newNode.set("id", "DD-" + newCnt);
+				newNode.set("id", "DD-" + placeId + "-" + newCnt);
 				newNode.setStyles({
 					color: "#000000",
-					margin: 0,
-					width: "100px"
+					margin: "0px",
+					width: "102px"
 				});
-				newNode.setHTML("DD-" + newCnt);
+				newNode.setHTML("<span class='ydText' contenteditable='true'>DD-" + placeId + "-" + newCnt + "</span>");
 			} else {
-				newNode.set("id", "YY-" + newCnt);				
-				newNode.setHTML("YY-" + newCnt);
+				newNode.set("id", "YY-" + placeId + "-" + newCnt);				
+				newNode.setStyles({
+					margin: "10px"
+				});
+				newNode.setHTML("<span class='ydText' contenteditable='true'>YY-" + placeId + "-" + newCnt + "</span>");
 			}
-			newNode.setAttribute("contenteditable", true);
+			//newNode.setAttribute("contenteditable", true);
 			newNode.setStyles({
 				opacity: 1
 			});
-			e.drop.get('node').appendChild(newNode);
+			targetUL.appendChild(newNode);
         });
         drag.on('drag:dropmiss', function(e) {
             if (this._playerStart) {
