Change in heading

--- a/srujan12/first/second.html
+++ b/srujan12/first/second.html
@@ -67,7 +67,7 @@
 <div id="mainLayout">
 	<div id="scHd">
 		<h5>Layout Manager Tool</h5>
-		<h1>Select Layout Layout</h1>
+		<h1>Select Layout</h1>
 	</div>
 	<div class="clearDiv" style="height: 20px;"></div>
 	<div id="actionSelect">
